--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
@@ -579,4 +579,149 @@
     
     3. SwitchTransition
     
+        1. 使用场景：用于有秩序的切换内部组件（组件的切换有先后顺序），一般和CSSTransition组件一起使用
+    
+        2. 模式mode：out-in 和 in-out 2中模式，默认是out-in模式
+    
+        3. out-in模式体验：
+    
+            ```jsx
+            import React, { useState } from "react";
+            import { CSSTransition, SwitchTransition } from "react-transition-group";
+            import "./App.css";
+            
+            export default function App() {
+              const [showCom1, setShowCom1] = useState(true);
+              return (
+                <div className="container">
+                  <div className="comp-container">
+                    <SwitchTransition>
+                      <CSSTransition timeout={1000} key={showCom1}>
+                        <h1>{showCom1 ? "组件1" : "组件2"}</h1>
+                      </CSSTransition>
+                    </SwitchTransition>
+                  </div>
+                  <button onClick={() => setShowCom1(!showCom1)}>显示组件1 / 组件2</button>
+                </div>
+              );
+            }
+            ```
+    
+            执行过程：
+    
+            1. 当key值改变时，会将之前的DOM根元素添加退出样式（exit,exit-active)
+            2. 退出完成后，将该DOM元素移除
+            3. 重新渲染内部DOM元素
+            4. 为新渲染的DOM根元素添加进入样式(enter, enter-active, enter-done)
+    
+        4. in-out模式体验：
+    
+             ```jsx
+             ...
+             <SwitchTransition mode="in-out">
+                       <CSSTransition timeout={3000} key={showCom1}>
+                         <h1>{showCom1 ? "组件1" : "组件2"}</h1>
+                       </CSSTransition>
+             </SwitchTransition>
+             ...
+             ```
+    
+            执行过程：
+    
+            1. 重新渲染内部DOM元素，保留之前的元素
+            2. 为新渲染的DOM根元素添加进入样式(enter, enter-active, enter-done)
+            3. 将之前的DOM根元素添加退出样式（exit,exit-active)
+            4. 退出完成后，将该DOM元素移除
+    
+        5. 添加自定义样式
+    
+            ```css
+            /* App.css */
+            
+            .container{
+              width: 100px;
+              margin: 0 auto;
+            }
+            .comp-container{
+              position: relative;
+              height: 100px;
+            }
+            .title{
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+            .exit-active{
+              opacity: 0;
+              transition: 1s;
+            }
+            .enter,.appear{
+              opacity: 0;
+              
+            }
+            .enter-active,.appear-active{
+              opacity: 1;
+              transition: 1s;
+            }
+            
+            ```
+    
+        6. 结合animate.css库使用
+    
+            ```jsx
+            import React, { useState } from "react";
+            import { CSSTransition, SwitchTransition } from "react-transition-group";
+            import "./App.css";
+            import "animate.css";
+            
+            export default function App() {
+              const MyClassNames = {
+                exit: "animate__bounceOut",
+                enter: "animate__bounceIn",
+              };
+              const [showCom1, setShowCom1] = useState(true);
+              return (
+                <div className="container">
+                  <div className="comp-container">
+                    <SwitchTransition>
+                      <CSSTransition
+                        appear
+                        timeout={800}
+                        key={showCom1}
+                        classNames={MyClassNames}
+                      >
+                        <h1 className="animate__animated animate__fast">
+                          {showCom1 ? "组件1" : "组件2"}
+                        </h1>
+                      </CSSTransition>
+                    </SwitchTransition>
+                  </div>
+                  <button onClick={() => setShowCom1(!showCom1)}>显示组件1 / 组件2</button>
+                </div>
+              );
+            }
+            ```
+    
+            ```css
+            /* App.css */
+            
+            .container{
+              width: 100px;
+              margin: 0 auto;
+            }
+            .comp-container{
+              position: relative;
+              height: 100px;
+            }
+            .title{
+              position: absolute;
+              top: 0;
+              left: 0;
+            }
+            ```
+    
+            
+    
+        7. 备注：**该库寻找dom元素的方式，是使用已经过时的API：findDomNode，该方法可以找到某个组件下的DOM根元素**
+    
     4. TransitionGroup
