--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
@@ -725,3 +725,77 @@
         7. 备注：**该库寻找dom元素的方式，是使用已经过时的API：findDomNode，该方法可以找到某个组件下的DOM根元素**
     
     4. TransitionGroup
+    
+        1. 说明：该组件的children，接收多个Transition或CSSTransition组件，该组件用于根据这些子组件的key值，控制他们的进入和退出状态
+    
+        2. 代码实现
+    
+            ```jsx
+            import React, { useState } from "react";
+            import { CSSTransition, TransitionGroup } from "react-transition-group";
+            import { v4 as uuid } from "uuid";
+            import "./App.css";
+            import "animate.css";
+            
+            export default function App() {
+              const MyClassNames = {
+                exitActive: "animate__fadeOutLeft",
+                enterActive: "animate__fadeInRight",
+              };
+              const [taskslist, setTaskslist] = useState([
+                { id: uuid(), name: "task 1" },
+                { id: uuid(), name: "task 2" },
+              ]);
+              return (
+                <div className="container">
+                  <TransitionGroup>
+                    {taskslist.map((t) => (
+                      <CSSTransition timeout={1000} key={t.id} classNames={MyClassNames}>
+                        <div className="animate__animated animate__fast">
+                          <span>{t.name}</span>
+                          <button
+                            onClick={() => {
+                              const newTasksList = taskslist.filter(
+                                (task) => task.id !== t.id
+                              );
+                              setTaskslist(newTasksList);
+                            }}
+                          >
+                            删除
+                          </button>
+                        </div>
+                      </CSSTransition>
+                    ))}
+                  </TransitionGroup>
+                  <div className="addBtn">
+                    <button
+                      onClick={() => {
+                        let name = window.prompt("请输入一个任务");
+                        setTaskslist([...taskslist, { id: uuid(), name: name }]);
+                      }}
+                    >
+                      添加一个任务
+                    </button>
+                  </div>
+                </div>
+              );
+            }
+            
+            ```
+    
+            ```css
+            /* App.css */
+            
+            .container{
+              width: 200px;
+              margin: 0 auto;
+            }
+            
+            .addBtn{
+             margin-top: 20px;
+            }
+            ```
+    
+            
+    
+6. 综合案例
