--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
@@ -741,14 +741,17 @@
               const MyClassNames = {
                 exitActive: "animate__fadeOutLeft",
                 enterActive: "animate__fadeInRight",
+                appear: "animate__fadeInRight",
               };
               const [taskslist, setTaskslist] = useState([
                 { id: uuid(), name: "task 1" },
                 { id: uuid(), name: "task 2" },
+                { id: uuid(), name: "task 3" },
+                { id: uuid(), name: "task 4" },
               ]);
               return (
                 <div className="container">
-                  <TransitionGroup>
+                  <TransitionGroup appear>
                     {taskslist.map((t) => (
                       <CSSTransition timeout={1000} key={t.id} classNames={MyClassNames}>
                         <div className="animate__animated animate__fast">
