--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/04. Hook/markdown/14. React动画.md
@@ -124,11 +124,11 @@
                 ![image-20240424200753917](./assets/6.png)
             
             6. 其他属性：查看官网了解
-    
+
     2. CSSTransition的使用
-    
+
         1. 功能初体验
-    
+
             ```jsx
             import React, { useState } from "react";
             import { CSSTransition } from "react-transition-group";
@@ -147,37 +147,37 @@
               );
             }
             ```
-    
+
             点击按钮，查看CSSTransition内部的DOM根元素div的样式变化
-    
+
             进入Transition状态时：
-    
+
             ![image-20240424200753917](./assets/7.png)
-    
+
             退出Transition状态时：
-    
+
             ![image-20240424200753917](./assets/8.png)
-    
+
             点击按钮，实现CSSTransition的进入/退出状态切换
-    
+
             当进入时，发生：
-    
+
             ```markdown
             1. 为CSSTransition内部的DOM根元素（后续统一称之为DOM元素）添加样式enter
             2. 在一下帧(enter样式已经完全应用到了元素)，立即为该元素添加样式enter-active
             3. 当timeout结束后，去掉之前的样式，添加样式enter-done
             ```
-    
+
             当退出时，发生：
-    
+
             ```markdown
              1. 为CSSTransition内部的DOM根元素（后续统一称之为DOM元素）添加样式exit
              2. 在一下帧(exit样式已经完全应用到了元素)，立即为该元素添加样式exit-active
              3. 当timeout结束后，去掉之前的样式，添加样式exit-done
             ```
-    
+
         2. 给元素添加的样式，设置具体的内容（编写css样式）,并引入使用
-    
+
             ```css
             /* App.css */
             .enter {
@@ -200,15 +200,15 @@
               opacity: 0;
             }
             ```
-    
+
             这样就实现了简单的进入/退出Transition效果了
-    
+
         3. 设置classNames属性，可以指定类样式的名称
-    
+
             比如默认名称是“enter-active", 设置classNames属性值为“test"后，样式名变为“test-enter-active” ，其他样式名一次类推
-    
+
             1. 字符串：为类样式添加前缀
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 import { CSSTransition } from "react-transition-group";
@@ -233,11 +233,11 @@
                   );
                 }
                 ```
-    
+
                 
-    
+
             2. 对象：为每个类样式指定具体的名称（非前缀）
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 import { CSSTransition } from "react-transition-group";
@@ -277,13 +277,13 @@
                   );
                 }
                 ```
-    
+
             3. 关于appear样式的说明
-    
+
                 配置首次渲染时的类样式，使用appear属性。
-    
+
                 appear、appear-active、appear-done，它和enter的唯一区别在于完成时，在页面初次加载完成后，会同时加入appear-done和enter-done
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 import { CSSTransition } from "react-transition-group";
@@ -325,11 +325,11 @@
                   );
                 }
                 ```
-    
+
         4. 综合效果展示
-    
+
             1. 准备组件
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 
@@ -350,9 +350,9 @@
                   );
                 }
                 ```
-    
+
             2. 使用动画库，配置样式
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 import { CSSTransition } from "react-transition-group";
@@ -385,11 +385,11 @@
                   );
                 }
                 ```
-    
+
                 注意：使用appear属性设置页面初次渲染时的动画；使用mountOnEnter属性，配置懒加载：如果该组件没进入Transition状态（in=false), 页面初次渲时，不会加载该组件
-    
+
             3. 编写样式，并引入使用
-    
+
                 ```css
                 /* App.css */
                 
@@ -426,17 +426,17 @@
                 }
                 
                 ```
-    
+
         5. 结合animate.css 库的使用
-    
+
             1. 安装animate.css 库
-    
+
                 ```bash
                 yarn add animate.css
                 ```
-    
+
             2. 重新设计组件
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 import { CSSTransition } from "react-transition-group";
@@ -474,9 +474,9 @@
                   );
                 }
                 ```
-    
+
             3. 使用animate.css库，并给2个子组件添加固定的animate样式
-    
+
                 ```jsx
                 ...
                 import "animate.css";
@@ -491,9 +491,9 @@
                 </div>
                 ...
                 ```
-    
+
             4. 配置Transition样式对象，使用animate样式
-    
+
                 ```jsx
                 import React, { useState } from "react";
                 import { CSSTransition } from "react-transition-group";
@@ -549,11 +549,11 @@
                   );
                 }
                 ```
-    
+
                 
-    
+
             5. 编写自定义样式App.css
-    
+
                 ```css
                 /* App.css */
                 
@@ -574,17 +574,17 @@
                   display: none;
                 }
                 ```
-    
+
                 
-    
+
     3. SwitchTransition
-    
+
         1. 使用场景：用于有秩序的切换内部组件（组件的切换有先后顺序），一般和CSSTransition组件一起使用
-    
+
         2. 模式mode：out-in 和 in-out 2中模式，默认是out-in模式
-    
+
         3. out-in模式体验：
-    
+
             ```jsx
             import React, { useState } from "react";
             import { CSSTransition, SwitchTransition } from "react-transition-group";
@@ -606,16 +606,16 @@
               );
             }
             ```
-    
+
             执行过程：
-    
+
             1. 当key值改变时，会将之前的DOM根元素添加退出样式（exit,exit-active)
             2. 退出完成后，将该DOM元素移除
             3. 重新渲染内部DOM元素
             4. 为新渲染的DOM根元素添加进入样式(enter, enter-active, enter-done)
-    
+
         4. in-out模式体验：
-    
+
              ```jsx
              ...
              <SwitchTransition mode="in-out">
@@ -625,16 +625,16 @@
              </SwitchTransition>
              ...
              ```
-    
+
             执行过程：
-    
+
             1. 重新渲染内部DOM元素，保留之前的元素
             2. 为新渲染的DOM根元素添加进入样式(enter, enter-active, enter-done)
             3. 将之前的DOM根元素添加退出样式（exit,exit-active)
             4. 退出完成后，将该DOM元素移除
-    
+
         5. 添加自定义样式
-    
+
             ```css
             /* App.css */
             
@@ -665,9 +665,9 @@
             }
             
             ```
-    
+
         6. 结合animate.css库使用
-    
+
             ```jsx
             import React, { useState } from "react";
             import { CSSTransition, SwitchTransition } from "react-transition-group";
@@ -701,7 +701,7 @@
               );
             }
             ```
-    
+
             ```css
             /* App.css */
             
@@ -719,17 +719,17 @@
               left: 0;
             }
             ```
-    
+
             
-    
+
         7. 备注：**该库寻找dom元素的方式，是使用已经过时的API：findDomNode，该方法可以找到某个组件下的DOM根元素**
-    
+
     4. TransitionGroup
-    
+
         1. 说明：该组件的children，接收多个Transition或CSSTransition组件，该组件用于根据这些子组件的key值，控制他们的进入和退出状态
-    
+
         2. 代码实现
-    
+
             ```jsx
             import React, { useState } from "react";
             import { CSSTransition, TransitionGroup } from "react-transition-group";
@@ -785,7 +785,7 @@
             }
             
             ```
-    
+
             ```css
             /* App.css */
             
@@ -798,7 +798,154 @@
              margin-top: 20px;
             }
             ```
-    
+
             
-    
-6. 综合案例
+
+6. 封装自己的Transition组件
+
+    1. 说明：
+
+        1. Transition组件它本身不提供动画功能，只是提供并管理动画类名。具体的动画操作可以使用animate.css库，或者自定义编写
+
+        2. 在一个项目中，可以把实现动画的功能进行封装，即自定义封装一个通用的动画组件，这样，需要的地方就可以直接使用了
+
+    2. 代码实现
+
+        1. common文件夹中添加新的文件夹，并创建组件FadeTransition
+
+            ```jsx
+            import React from "react";
+            import "./index.css";
+            import { CSSTransition } from "react-transition-group";
+            
+            // 设置默认属性
+            FadeTransition.defaultProps = {
+              timeout: 500,
+            };
+            
+            /**
+             * 封装fade效果的动画组件，已经编写完成了统一的fade动画效果
+             * @param {*} props
+             * classNames="fade"： 其他定义的样式会被覆盖，不允许自定义动画样式
+             * @returns
+             */
+            export default function FadeTransition(props) {
+              return (
+                <div>
+                  <CSSTransition
+                    {...props}
+                    // 自定义类名，会覆盖掉用户自定义传入的类名--》不允许使用其他的样式
+                    classNames="fade"
+                  >
+                    {props.children}
+                  </CSSTransition>
+                </div>
+              );
+            }
+            ```
+
+            ```css
+            /* index.css */
+            
+            .fade-exit-active{
+              opacity: 0;
+              transition: 500ms;
+            }
+            .fade-exit-done{
+              opacity: 0;
+            }
+            .fade-enter{
+              opacity: 0;
+            }
+            .fade-enter-active{
+              opacity: 1;
+              transition: 500ms;
+            }
+            ```
+
+        2. 优化：让用户可以配置transition的时间，这时，transition就不能写在css样式表中了，使用Transition组件提供的事件属性（onEntering, onEntered, onExiting, onExited)，手动给node添加或移除transition样式.
+
+            ```jsx
+            import React from "react";
+            import "./index.css";
+            import { CSSTransition } from "react-transition-group";
+            
+            // 设置默认属性
+            FadeTransition.defaultProps = {
+              timeout: 1000,
+            };
+            
+            /**
+             * 封装fade效果的动画组件，已经编写完成了统一的fade动画效果
+             * @param {*} props
+             * classNames="fade"： 其他定义的样式会被覆盖，不允许自定义动画样式
+             * @returns
+             */
+            export default function FadeTransition(props) {
+              function addTransition(node) {
+                node.style.transition = `opacity ${props.timeout}ms`;
+              }
+              function removeTransition(node) {
+                node.style.transition = ``;
+              }
+              return (
+                <div>
+                  <CSSTransition
+                    appear
+                    {...props}
+                    // 自定义类名，会覆盖掉用户自定义传入的类名--》不允许使用其他的样式
+                    classNames="fade"
+                    // 使用事件hook，手动设置style.transition
+                    onEntering={addTransition}
+                    onEntered={(node) => {
+                      removeTransition(node);
+                      props.onEntered && props.onEntered(node, props.show);
+                    }}
+                    onExiting={addTransition}
+                    onExited={(node) => {
+                      removeTransition(node);
+                      props.onExited && props.onExited(node);
+                    }}
+                  >
+                    {props.children}
+                  </CSSTransition>
+                </div>
+              );
+            }
+            ```
+
+            ```css
+            /* index.css */
+            
+            .fade-exit-active, .fade-exit-done,.fade-enter,.fade-appear{
+              opacity: 0;
+            }
+            
+            .fade-enter-active,.fade-appear-active{
+              opacity: 1;
+            }
+            ```
+
+        3. 结合SwitchTransition使用
+
+            ```jsx
+            import React, { useState } from "react";
+            import FadeTransition from "./common/FadeTransition";
+            import "./App.css";
+            import { SwitchTransition } from "react-transition-group";
+            
+            export default function App() {
+              const [show, setShow] = useState(true);
+              return (
+                <div className="container">
+                  <SwitchTransition>
+                    <FadeTransition key={show}>
+                      <h1>{show ? "标题内容1" : "标题内容2"}</h1>
+                    </FadeTransition>
+                  </SwitchTransition>
+            
+                  <button onClick={() => setShow(!show)}>切换内容</button>
+                </div>
+              );
+            }
+            ```
