05/ 06. 电影列表查询demo

--- a/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/markdown/06. 电影列表查询demo.md
+++ b/3. Advanced Front-end Developer/02. 就业提升/07 React/05. Router/markdown/06. 电影列表查询demo.md
@@ -684,7 +684,123 @@ api地址：https://developer.themoviedb.org/reference/search-movie
         ```
         ![sdf](./assets/27.png)
         
-    
+        
         
 
 6. 详情组件...
+
+    1. 思路：
+
+        1. MovieTable组件中的操作项，使用Link组件``<Link to={`/students/${m.id}`}>详情</Link>``，设置地址路径
+        2. 路由组件中使用`<**Route** path**=**"/students/:id" exact component**=**{MovieDetail} />`, 进行路径匹配组件
+        3. 详情组件中使用`props.match.params`对象获取id属性
+        4. 在使用获取到的id，调用服务器端口，获取movie详情
+        5. 将movie对象传递给Movie组件进行渲染
+
+    2. 编写服务器端口API
+
+        ```jsx
+        export async function getMoviesDetail(id) {
+          const res = await axios.get(`/3/movie/${id}`, {
+            headers: { Authorization: "Bearer " + TOKEN },
+          });
+          return res.data;
+        }
+        ```
+
+    3. MovieTable组件,添加Link组件，进行路径跳转
+
+        ```jsx
+        import React from "react";
+        import "./index.css";
+        import { Link } from "react-router-dom";
+        
+        export default function MovieTable(props) {
+          const trs = props.results.map((m) => (
+            <tr key={m.id}>
+            ...
+              <td>
+                <Link to={`/students/${m.id}`}>详情</Link>
+              </td>
+            </tr>
+          ));
+        
+          return (
+            <table className="table">
+           ...
+            </table>
+          );
+        }
+        ```
+
+    4. 路由组件中添加新的路由项
+
+        ```jsx
+        ...
+        import MovieDetail from "../../components/MovieDetial";
+        
+        export default function Admin() {
+          return (
+            <Layout header={<Header />} aside={<Menu />}>
+              {/* {"children "} */}
+              <Switch>
+                <Route path="/" exact component={Welcome} />
+                <Route path="/students" exact component={MovieList} />
+                <Route path="/students/add" exact component={MovieAdd} />
+                <Route path="/students/:id" exact component={MovieDetail} />
+        			...
+              </Switch>
+            </Layout>
+          );
+        }
+        ```
+
+        
+
+    5. 编写MovieDetail组件， 编写自定义hook，从服务端接口中获取数据
+
+        ```jsx
+        import React, { useState, useEffect } from "react";
+        import { getMoviesDetail } from "../../server/movieAPI";
+        import Movie from "../MovieList/Movie";
+        import "./index.css";
+        
+        function useMovieById(id) {
+          const [movie, setMovie] = useState(null);
+          // 注意：对象的初始值设为null，而不是空对象
+          // 初始值设为空对象的话，会引起使用对象属性是undefined的错误
+          useEffect(() => {
+            getMoviesDetail(id).then((resp) => {
+              setMovie(resp);
+            });
+          }, [id]);
+          return movie;
+        }
+        
+        export default function MovieDetail(props) {
+          const movieID = +props.match.params.id;
+          const movie = useMovieById(movieID);
+          console.log(movie);
+        
+          return (
+            <div>
+              <header className="detail_header">
+                <h1>MovieDetail</h1>
+              </header>
+              <div className="detail_container">
+                {/* 如果movie数据尚未加载完成，返回一个加载指示器或空元素 */}
+                {movie ? <Movie movie={movie} /> : <div>Loading...</div>}
+              </div>
+            </div>
+          );
+        }
+        ```
+
+    6. 样式部分，省略
+
+    7. 测试效果
+
+        ![sdf](./assets/28.png)
+        
+        点击详情后        
+        ![sdf](./assets/29.png)        
